--- a/views/Main_page.hbs
+++ b/views/Main_page.hbs
@@ -30,7 +30,7 @@
                     <option value="Пернатые">Пернатые</option>
                     <option value="Кошки">Кошки</option>
                     <option value="Собаки">Собаки</option>
-                    <option value="Экзотические животные">Экзотические животные</option>
+                    <option value="Экзотические животные">Другое</option>
                 </select>
 
                 <div class="input-group-append" style="padding-left: 5pc;">
