--- a/views/new_patient.hbs
+++ b/views/new_patient.hbs
@@ -45,7 +45,7 @@ input, textarea{
     <title>Добавить пациента</title>
 </head>
 <body style="background-color: bisque !important;" >
-    <nav class="navbar navbar-expand-sm bg-warning navbar-warning mb-2"><a href="/" class="navbar-brand" ><h3>К началу</h3></a></nav>
+    <nav class="navbar navbar-expand-sm bg-warning navbar-warning mb-2"><div class="container"><a href="/" class="navbar-brand" ><h3>К началу</h3></a></div></nav>
     <div style=" width: 50% !important;  margin: auto; justify-content: space-between; " >
 		<form method="post">
 
