--- a/views/Main_page.hbs
+++ b/views/Main_page.hbs
@@ -29,7 +29,7 @@
                     <option value="Грызун">Грызуны</option>
                     <option value="Пернатое">Пернатые</option>
                     <option value="Кот">Кошки/коты</option>
-                    <option value="Собака">Собака</option>
+                    <option value="Собака">Собаки</option>
                     <option value="Другое">Другое</option>
                 </select>
 
