--- a/views/patient.hbs
+++ b/views/patient.hbs
@@ -7,6 +7,7 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
     <title>Карточка пациента</title>
@@ -69,6 +70,7 @@
 		</div>
 
 <hr>
+<h3>Файлы</h3>
 		<div class="form-group mt-2">
 	 		<form method="post" action="/upload" enctype="multipart/form-data">
 	 			<div class="input-group">
@@ -84,10 +86,8 @@
 
 	 	{{#if showTable}}
 
-			<table class="table table-hover table-borderless">
-				<thead class="thead-light">
-	            	<tr><th>Название файла</th></tr>
-	            </thead>
+			<table class="table  table-borderless">
+				
 	            <tbody>
 
 	            	{{#each files}}
